--- a/docs/SASS/base/_base.scss
+++ b/docs/SASS/base/_base.scss
@@ -21,9 +21,9 @@ html {
 	// 	font-size: 70%;
 	// }
 
-	@include respond(big-desktop) {
-		font-size: 80%;
-	}
+	// @include respond(big-desktop) {
+	// 	font-size: 80%;
+	// }
 
 	
 }
