--- a/docs/SASS/layout/_footer.scss
+++ b/docs/SASS/layout/_footer.scss
@@ -2,18 +2,18 @@
 
   &__home {
     width: 100%;
-    height: 40rem;
-    @include respond(iconFix){
-     height: 50rem;
-    }
+    // height: 40rem;
+    // @include respond(iconFix){
+    //  height: 50rem;
+    // }
     background-image: linear-gradient(to left top, $color-primary, $color-secondary);
     color: $color-white;
 
     &-copyright{
       font-size: 40%;
-      padding: 10rem 2rem 0 2rem;
+      padding: 7rem 2rem 9rem 2rem;
       @include respond(iconFix){
-        padding: 20rem 2rem 0 2rem;
+        padding: 7rem 2rem 9rem 2rem;
       }
 
       @include respond(tab-land){
@@ -25,7 +25,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding-top: 5rem;
+      padding-top: 2rem;
 
       &-icon {
         height: 2rem;
