--- a/docs/SASS/main.scss
+++ b/docs/SASS/main.scss
@@ -16,6 +16,9 @@
 @import "components/aboutPage";
 @import "components/portfolioContainer";
 @import "components/contactForm";
+@import "components/certificates";
+@import "components/topTech";
+@import "components/bottomTech";
 
 @import "layout/footer";
 @import "layout/grid";
