i think i got it

--- a/docs/SASS/components/_aboutPage.scss
+++ b/docs/SASS/components/_aboutPage.scss
@@ -6,7 +6,7 @@
       height: 90vh;
     }
     background-image: linear-gradient(to bottom right, rgba($color-primary, .6), rgba($color-secondary, .6)),
-                        url("./images/ariaWinnie2.JPG") ;
+                        url("/images/ariaWinnie2.jpg") ;
     height: 100vh;
     background-position: center;
     background-size: cover;
