--- a/docs/SASS/components/_aboutPage.scss
+++ b/docs/SASS/components/_aboutPage.scss
@@ -3,10 +3,10 @@
 
   &__top {
     @include respond(phone) {
-      height: 90vh;
+      height: 95vh;
     }
     background-image: linear-gradient(to bottom right, rgba($color-primary, .6), rgba($color-secondary, .6)),
-                        url("/MattAertker/images/ariaWinnie2.jpg") ;
+                        url("/images/ariaWinnie2.jpg") ;
     height: 100vh;
     background-position: center;
     background-size: cover;
@@ -62,7 +62,7 @@
   }
 
   &__certificates {
-    padding: 10rem 0;
+    padding-top: 10rem;
     background-color: #fff;
 
     
@@ -76,7 +76,6 @@
 
 
     &-line {
-      margin-left: 10%;
       width: 80%;
       border-bottom: 5px solid black;
     }
