fixing img again

--- a/docs/SASS/components/_aboutPage.scss
+++ b/docs/SASS/components/_aboutPage.scss
@@ -6,7 +6,7 @@
       height: 95vh;
     }
     background-image: linear-gradient(to bottom right, rgba($color-primary, .6), rgba($color-secondary, .6)),
-                        url("/MattAertker/images/ariaWinnie2.jpg") ;
+                        url("https://mattaertker.github.io/MattAertker/images/ariaWinnie2.jpg") ;
     height: 100vh;
     background-position: center;
     background-size: cover;
