editing some images locations

--- a/docs/SASS/components/_homeIntro.scss
+++ b/docs/SASS/components/_homeIntro.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   // background-color: $color-grey-light-1;
   background-image: linear-gradient(to bottom right, rgba($color-white, .6), rgba($color-white, .6)),
-                    url('/MattAertker/images/intro.JPG');
+                    url('https://mattaertker.github.io/MattAertker/images/intro.JPG');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
