--- a/docs/SASS/components/_certificates.scss
+++ b/docs/SASS/components/_certificates.scss
@@ -159,7 +159,8 @@ $accent-color: #355cc9;
 		line-height: 1.4em;
 		overflow: auto;
 		color: $accent-color;
-		padding-right: 10px;
+		padding-right: 1.8rem;
+		// margin-right: 1.5rem;
 	}
 
 	.location,
