--- a/docs/SASS/layout/_grid.scss
+++ b/docs/SASS/layout/_grid.scss
@@ -6,6 +6,7 @@
     &-topTech {
         margin-bottom: 5rem;
         flex-direction: column;
+        align-items: center;
         @include respond(phone) {
             flex-direction: row;
             justify-content: center;
