Revert "editing some images locations"
This reverts commit a834843ebfe867881039ec0f9e7a925363483188.

--- a/docs/SASS/components/_certificates.scss
+++ b/docs/SASS/components/_certificates.scss
@@ -159,8 +159,7 @@ $accent-color: #355cc9;
 		line-height: 1.4em;
 		overflow: auto;
 		color: $accent-color;
-		padding-right: 1.8rem;
-		// margin-right: 1.5rem;
+		padding-right: 10px;
 	}
 
 	.location,
