--- a/docs/SASS/components/_aboutPage.scss
+++ b/docs/SASS/components/_aboutPage.scss
@@ -77,6 +77,10 @@
 
     &-line {
       width: 80%;
+      margin-left: 10%;
+      @include respond(phone) {
+        margin-left: 0;
+      }
       border-bottom: 5px solid black;
     }
   }
