--- a/docs/SASS/components/_certificates.scss
+++ b/docs/SASS/components/_certificates.scss
@@ -8,10 +8,7 @@ $accent-color: #355cc9;
 }
 
 .card {
-    height: 33rem;
-    @include respond(phone) {
-        height: 40rem;
-    }
+    height: 40rem;
     width: 100vw;
 	max-width: 580px;
 	max-height: 55rem;
@@ -126,7 +123,10 @@ $accent-color: #355cc9;
 			background-color: #ccc;
 		}
 		span {
-			font-size: 2em;
+			@include respond(iconFix) {
+				font-size: 2em;
+			}
+			font-size: 2rem;
 			font-weight: 700;
 		}
 		i {
@@ -172,8 +172,12 @@ $accent-color: #355cc9;
 
 	.cert-name {
 		grid-column: 1/3;
-		justify-self: left;
-    color: $accent-color;
+		// float: left;
+		// grid-row: 1;
+		@include respond(phone) {
+			justify-self: left;
+		}
+        color: $accent-color;
 	}
 
 	.button {
