--- a/docs/css/style.concat.css
+++ b/docs/css/style.concat.css
@@ -99,7 +99,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url("/MattAertker/images/intro.JPG");
+  background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url("https://mattaertker.github.io/MattAertker/images/intro.JPG");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover; }
@@ -313,7 +313,7 @@ a.intro-Contact-link {
 .About {
   width: 100vw; }
   .About__top {
-    background-image: linear-gradient(to bottom right, rgba(29, 17, 96, 0.6), rgba(0, 120, 140, 0.6)), url("https://mattaertker.github.io/MattAertker/images/ariaWinnie2.jpg");
+    background-image: linear-gradient(to bottom right, rgba(29, 17, 96, 0.6), rgba(0, 120, 140, 0.6)), url("https://mattaertker.github.io/MattAertker/images/userAbout.jpg");
     height: 100vh;
     background-position: center;
     background-size: cover;
